@@ -4,7 +4,7 @@ class Visit < ActiveRecord::Base
   after_save :save_event
 
   # Named Scopes
-  scope :current, conditions: { deleted: false }
+  scope :current, conditions: ["visits.deleted = ? and visits.patient_id IN (select patients.id from patients where patients.deleted = ?)", false, false]
   scope :with_mrn, lambda { |*args| { conditions: ["visits.patient_id in (select patients.id from patients where LOWER(patients.mrn) LIKE (?) or LOWER(patients.subject_code) LIKE (?) or LOWER(patients.first_name) LIKE (?) or LOWER(patients.last_name) LIKE (?))", args.first.to_s + '%', '%' + args.first.downcase.split(' ').join('%') + '%', '%' + args.first.downcase.split(' ').join('%') + '%', '%' + args.first.downcase.split(' ').join('%') + '%'] } }
   scope :subject_code_not_blank, conditions: ["visits.patient_id in (select patients.id from patients where patients.subject_code != '')"]
   scope :visit_before, lambda { |*args| { conditions: ["visits.visit_date < ?", (args.first+1.day)]} }
