@@ -1,5 +1,8 @@
 == 0.7.2
 
+* Bug Fix
+  * Prescreens, Mailings, Calls, Evaluations, and Visits no longer display if the associated patient has been deleted
+
 == 0.7.1
 
 * Bug Fix
